// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full integration test synth 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"first\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"null\\": {
        \\"version\\": \\" ~> 3.1.0\\",
        \\"source\\": \\"null\\"
      }
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"test\\": {
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"first/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`full integration test synth 2`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"second\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"null\\": {
        \\"version\\": \\" ~> 3.1.0\\",
        \\"source\\": \\"null\\"
      }
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"test\\": {
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"second/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`full integration test synth with json output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"first\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"null\\": {
        \\"version\\": \\" ~> 3.1.0\\",
        \\"source\\": \\"null\\"
      }
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"test\\": {
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"first/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}
"
`;
